--- a/index.html
+++ b/index.html
@@ -95,6 +95,27 @@
         </div>
       </div>
       <!-- akhir info panel -->
+
+      <!-- working space -->
+      <div class="row working-space">
+        <div class="col-lg-6">
+          <img
+            src="img/workingspace.png"
+            alt="workingspace"
+            class="img-thumbnail"
+          />
+        </div>
+        <div class="col-lg-6">
+          <h3>you <span>work</span> like <br />at <span>home</span></h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+            <br />
+            at dolorem recusandae, a blanditiis provident.
+          </p>
+          <a href="#" class="btn btn-primary tombol">gallery</a>
+        </div>
+      </div>
+      <!-- akhir working space -->
     </div>
 
     <script
